aws/full-stack-3-tier/Main/gateway.tf
# Define the internet gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.shared.id}"

  tags {
    Name = "igw_prod_vpc"
  }
}

#Assign Elastic IP
resource "aws_eip" "nat" {
  vpc      = true
  tags {
    Name = "nat_gw"
  }
}


#Define NAT Gateway
resource "aws_nat_gateway" "nat" {
  allocation_id = "${aws_eip.nat.id}"
  subnet_id     = "${aws_subnet.sub_pub_1a.id}"

  tags {
    Name = "nat_prod_vpc"
  }
}
